--- a/payment.html
+++ b/payment.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="payment.css">
     <title>Payment Gateway</title>
-    <script src="script.jss"></script> 
+    <script src="payment.js"></script> 
 </head>
 <body>
     <div class="container" style="margin: 70px; ">
