--- a/mainpage.html
+++ b/mainpage.html
@@ -15,7 +15,9 @@
         #myCarousel {
             background-color: transparent;
         }
-
+        .navbar-custom{
+            background-color: #35055b;
+        }
         .carousel-caption {
             text-align: center;
             top: 50%;
@@ -36,8 +38,8 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Community Resilience</a>
+    <nav class="navbar navbar-expand-lg" style="background-color: #35055b;">
+        <a class="navbar-brand" href="#" style="color:white" font-weight="bold;">Community Resilience</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,32 +47,32 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="color:white" font-weight="bold;">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white" font-weight="bold;">
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <a class="dropdown-item" href="admin.html">Admission</a>
-                        <a class="dropdown-item" href="donate.html">Donate</a>
-                        <a class="dropdown-item" href="emergency.html">Emergency Contacts</a>
-                        <a class="dropdown-item" href="shelter.html">Temporary Shelter</a>
-                        <a class="dropdown-item" href="Medical.html">Medical Aid</a>
+                        <a class="dropdown-item" href="admin.html" style="color:white" font-weight="bold;">Admission</a>
+                        <a class="dropdown-item" href="donate.html" style="color:white" font-weight="bold;">Donate</a>
+                        <a class="dropdown-item" href="emergency.html" style="color:white" font-weight="bold;">Emergency Contacts</a>
+                        <a class="dropdown-item" href="shelter.html" style="color:white" font-weight="bold;">Temporary Shelter</a>
+                        <a class="dropdown-item" href="Medical.html" style="color:white" font-weight="bold;">Medical Aid</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signup.html">Signup</a>
+                    <a class="nav-link" href="signup.html "style="color:white" font-weight="bold;">Signup</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Sosbutton.html">SOS Button</a>
+                    <a class="nav-link" href="Sosbutton.html" style="color:white" font-weight="bold;">SOS Button</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Support.html">Community Support</a>
+                    <a class="nav-link" href="Support.html" style="color:white" font-weight="bold;">Community Support</a>
                 </li>
                 <li class="nav-item disabled">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Visualization</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true" style="color:white" font-weight="bold;">Visualization</a>
                 </li>
                 <!-- Google Translate Button -->
                 <li class="nav-item">
