Update and rename sharefloodaffectedregions.htmll to sharefloodaffectedregions.html

--- a/sharefloodaffectedregions.html
+++ b/sharefloodaffectedregions.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Emergency Alerts Map</h1>
+        <h1 class="text-center">Flood-affected locations alert </h1>
         <!-- Map container -->
         <div id="map"></div>
     </div>
